minikube/gateway_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: production
  labels:
    app: gateway-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: gateway-service
