minikube/gateway_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: microservice.com
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3000
